--- a/public/index.html
+++ b/public/index.html
@@ -15,42 +15,37 @@
 	<body class="main-page">
 		<div class="main-wrapper">
 			<!-- start sWatchSports-->
-			<section class="sWatchSports bg-wrap section" id="sWatchSports">
-				<div class="section-title">
-					<h1>Смотри спорт онлайн</h1>
-				</div>
+			<div class="sWatchSports bg-wrap section" id="sWatchSports">
 				<picture class="picture-bg">
 					<source type="image/webp" srcset="img/@2x/webp/watch-bg-lg.webp" media="(min-width:992px)"/>
 					<source type="image/webp" srcset="img/@2x/webp/watch-bg-sm.webp"/>
 					<source type="image/jpg" srcset="img/@2x/watch-bg-lg.png" media="(min-width:992px)"/>
 					<source type="image/jpg" srcset="img/@2x/watch-bg-sm.png"/><img class="object-fit-js" src="img/@2x/watch-bg-lg.png" alt="" loading="lazy"/>
 				</picture>
-				<div class="sWatchSports__content">
-					<div class="sWatchSports__logo"><img src="img/svg/logo.svg" alt=""/>
-					</div>
-					<div class="sWatchSports__main"><img src="img/svg/sWatchSports.svg" alt=""/>
-						<div class="sWatchSports__advantages">
-							<div class="sWatchSports__item">
-								<div class="sWatchSports__img-wrap"><img src="img/@2x/advantage-1.png" alt=""/>
-								</div>
-								<div class="text-white">Абсолютно <br> бесплатно</div>
+				<div class="sWatchSports__logo"><img src="img/svg/logo.svg" alt=""/>
+				</div>
+				<div class="sWatchSports__main"><img src="img/svg/sWatchSports.svg" alt=""/>
+					<div class="sWatchSports__advantages">
+						<div class="sWatchSports__item">
+							<div class="sWatchSports__img-wrap"><img src="img/@2x/advantage-1.png" alt=""/>
 							</div>
-							<div class="sWatchSports__item">
-								<div class="sWatchSports__img-wrap"><img src="img/@2x/advantage-2.png" alt=""/>
-								</div>
-								<div class="text-white">Прямой <br> эфир</div>
+							<div class="text-white">Абсолютно <br> бесплатно</div>
+						</div>
+						<div class="sWatchSports__item">
+							<div class="sWatchSports__img-wrap"><img src="img/@2x/advantage-2.png" alt=""/>
 							</div>
-							<div class="sWatchSports__item">
-								<div class="sWatchSports__img-wrap"><img src="img/@2x/advantage-3.png" alt=""/>
-								</div>
-								<div class="text-white">Простая <br> регистрация</div>
+							<div class="text-white">Прямой <br> эфир</div>
+						</div>
+						<div class="sWatchSports__item">
+							<div class="sWatchSports__img-wrap"><img src="img/@2x/advantage-3.png" alt=""/>
 							</div>
+							<div class="text-white">Простая <br> регистрация</div>
 						</div>
 					</div>
-					<a class="sWatchSports__btn" href="#"><span>Регистрация</span>
-					</a>
 				</div>
-			</section>
+				<a class="sWatchSports__btn" href="#"><span>Регистрация</span>
+				</a>
+			</div>
 			<!-- end sWatchSports-->
 		</div>
 	</body>
