--- a/public/index-eng.html
+++ b/public/index-eng.html
@@ -2,7 +2,7 @@
 <html lang="ru">
 	<head>
 		<meta charset="utf-8">
-		<title>Смотри спорт онлайн</title>
+		<title>Watch sports online</title>
 		<meta name="description" content="о чем страница">
 		<meta http-equiv="X-UA-Compatible" content="IE=edge">
 		<meta name="viewport" content="width=device-width,initial-scale=1.0,  shrink-to-fit=no">
@@ -24,26 +24,26 @@
 				</picture>
 				<div class="sWatchSports__logo"><img src="img/svg/logo.svg" alt=""/>
 				</div>
-				<div class="sWatchSports__main"><img src="img/svg/sWatchSports-ru.svg" alt=""/><img src="img/svg/sWatchSports.svg" alt="">
+				<div class="sWatchSports__main"><img src="img/svg/sWatchSports-eng.svg" alt=""/>
 					<div class="sWatchSports__advantages">
 						<div class="sWatchSports__item">
 							<div class="sWatchSports__img-wrap"><img src="img/@2x/advantage-1.png" alt="">
 							</div>
-							<div class="text-white">Абсолютно <br> бесплатно</div>
+							<div class="text-white">Absolutely <br> free</div>
 						</div>
 						<div class="sWatchSports__item">
 							<div class="sWatchSports__img-wrap"><img src="img/@2x/advantage-2.png" alt="">
 							</div>
-							<div class="text-white">Прямой <br> эфир</div>
+							<div class="text-white">Live <br> broadcasts</div>
 						</div>
 						<div class="sWatchSports__item">
 							<div class="sWatchSports__img-wrap"><img src="img/@2x/advantage-3.png" alt="">
 							</div>
-							<div class="text-white">Простая <br> регистрация</div>
+							<div class="text-white">Quick <br> signup</div>
 						</div>
 					</div>
 				</div>
-				<a class="sWatchSports__btn" href="https://refpa.top/L?tag=d_514359m_97c_watch_stream&amp;site=514359&amp;ad=97&amp;r=registration/"><span>Регистрация</span>
+				<a class="sWatchSports__btn" href="https://refpa.top/L?tag=d_514359m_97c_watch_stream&amp;site=514359&amp;ad=97&amp;r=registration/"><span>registration</span>
 				</a>
 			</div>
 			<!-- end sWatchSports-->
