--- a/public/index-eng.html
+++ b/public/index-eng.html
@@ -21,7 +21,17 @@
 				window.addEventListener('resize', () => { 
 				 w();
 				}, { passive: true });
-			}
+			};
+			let vh = window.innerHeight * 0.01;
+			// Then we set the value in the --vh custom property to the root of the document
+			document.documentElement.style.setProperty('--vh', `${vh}px`);
+			
+			// We listen to the resize event
+			window.addEventListener('resize', () => {
+				// We execute the same script as before
+				let vh = window.innerHeight * 0.01;
+				document.documentElement.style.setProperty('--vh', `${vh}px`);
+			}, { passive: true });
 		</script>
 		<link type="image/ico" href="img/favicon.ico" rel="shortcut icon"><meta name="format-detection" content="telephone=no">
 <link rel="preconnect" href="https://fonts.googleapis.com">
