edit sWatchSports22 section

--- a/public/index-eng.html
+++ b/public/index-eng.html
@@ -34,9 +34,6 @@
 			}, { passive: true });
 		</script>
 		<link type="image/ico" href="img/favicon.ico" rel="shortcut icon"><meta name="format-detection" content="telephone=no">
-<link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,900;1,900&display=swap" rel="stylesheet">
 		<link href="css/main.min.css" rel="stylesheet"/>
 	</head>
 	<body class="main-page">
@@ -46,8 +43,8 @@
 				<picture class="picture-bg">
 					<source type="image/webp" srcset="img/@2x/webp/watch-bg-lg.webp" media="(min-width:992px)"/>
 					<source type="image/webp" srcset="img/@2x/webp/watch-bg-sm.webp"/>
-					<source type="image/jpg" srcset="img/@2x/watch-bg-lg.png" media="(min-width:992px)"/>
-					<source type="image/jpg" srcset="img/@2x/watch-bg-sm.png"/><img class="object-fit-js" src="img/@2x/watch-bg-lg.png" alt="" loading="lazy"/>
+					<source type="image/png" srcset="img/@2x/watch-bg-lg.png" media="(min-width:992px)"/>
+					<source type="image/png" srcset="img/@2x/watch-bg-sm.png"/><img class="object-fit-js" src="img/@2x/watch-bg-lg.png" alt="" loading="lazy"/>
 				</picture>
 				<div class="sWatchSports__logo"><img src="img/svg/logo.svg" alt=""/>
 				</div>
