--- a/public/index-22Bet.html
+++ b/public/index-22Bet.html
@@ -2,7 +2,7 @@
 <html lang="ru">
 	<head>
 		<meta charset="utf-8">
-		<title>Смотри спорт онлайн</title>
+		<title>Watch sports online</title>
 		<meta name="description" content="о чем страница">
 		<meta http-equiv="X-UA-Compatible" content="IE=edge">
 		<meta name="viewport" content="width=750,   maximum-scale=1 , user-scalable=0, shrink-to-fit=no">
@@ -38,39 +38,41 @@
 	</head>
 	<body class="main-page">
 		<div class="main-wrapper">
-			<!-- start sWatchSports-->
-			<div class="sWatchSports bg-wrap section" id="sWatchSports">
-				<picture class="picture-bg">
-					<source type="image/webp" srcset="img/@2x/webp/watch-bg-lg.webp" media="(min-width:992px)"/>
-					<source type="image/webp" srcset="img/@2x/webp/watch-bg-sm.webp"/>
-					<source type="image/png" srcset="img/@2x/watch-bg-lg.png" media="(min-width:992px)"/>
-					<source type="image/png" srcset="img/@2x/watch-bg-sm.png"/><img class="object-fit-js" src="img/@2x/watch-bg-lg.png" alt="" loading="lazy"/>
-				</picture>
-				<div class="sWatchSports__logo"><img src="img/svg/logo.svg" alt=""/>
+			<!-- start sWatchSports22-->
+			<section class="sWatchSports22 bg-wrap section" id="sWatchSports22">
+				<div class="picture picture-bg">
+					<source type="image/webp" srcset="img/@2x/webp/watch22-bg-lg.webp" media="(min-width:992px)"/>
+					<source type="image/webp" srcset="img/@2x/webp/watch22-bg-sm.webp"/>
+					<source type="image/png" srcset="img/@2x/watch22-bg-lg.png" media="(min-width:992px)"/>
+					<source type="image/png" srcset="img/@2x/watch22-bg-sm.png"/><img class="object-fit-js" src="img/@2x/watch22-bg-lg.png" alt="" loading="lazy"/>
 				</div>
-				<div class="sWatchSports__main"><img src="img/svg/sWatchSports-ru.svg" alt=""/><img src="img/svg/sWatchSports.svg" alt="">
-					<div class="sWatchSports__advantages">
-						<div class="sWatchSports__item">
-							<div class="sWatchSports__img-wrap"><img src="img/@2x/advantage-1.png" alt="">
+				<div class="sWatchSports22__logo"><img src="img/@2x/logo-22.png" alt=""/>
+				</div>
+				<div class="sWatchSports22__main">
+					<div class="sWatchSports22__wrap"><img class="text-img" src="img/@2x/sWatchSports22-eng.png" alt=""/><img class="bg" src="img/svg/Ellipse.svg" alt=""/>
+					</div>
+					<div class="sWatchSports22__advantages">
+						<div class="sWatchSports22__item">
+							<div class="sWatchSports22__img-wrap"><img src="img/@2x/advantage22-1.png" alt="">
 							</div>
-							<div class="text-white">Абсолютно <br> бесплатно</div>
+							<div class="text-white">Absolutely <br> free</div>
 						</div>
-						<div class="sWatchSports__item">
-							<div class="sWatchSports__img-wrap"><img src="img/@2x/advantage-2.png" alt="">
+						<div class="sWatchSports22__item">
+							<div class="sWatchSports22__img-wrap"><img src="img/@2x/advantage22-2.png" alt="">
 							</div>
-							<div class="text-white">Прямой <br> эфир</div>
+							<div class="text-white">Live <br> broadcasts</div>
 						</div>
-						<div class="sWatchSports__item">
-							<div class="sWatchSports__img-wrap"><img src="img/@2x/advantage-3.png" alt="">
+						<div class="sWatchSports22__item">
+							<div class="sWatchSports22__img-wrap"><img src="img/@2x/advantage22-3.png" alt="">
 							</div>
-							<div class="text-white">Простая <br> регистрация</div>
+							<div class="text-white">Quick <br> signup</div>
 						</div>
 					</div>
 				</div>
-				<a class="sWatchSports__btn" href="https://refpa.top/L?tag=d_514359m_97c_watch_stream&amp;site=514359&amp;ad=97&amp;r=registration/"><span>Регистрация</span>
+				<a class="sWatchSports22__btn" href="https://refpa.top/L?tag=d_514359m_97c_watch_stream&amp;site=514359&amp;ad=97&amp;r=registration/"><span>registration</span>
 				</a>
-			</div>
-			<!-- end sWatchSports-->
+			</section>
+			<!-- end sWatchSports22-->
 		</div>
 	</body>
 </html>
