--- a/public/index-22Bet.html
+++ b/public/index-22Bet.html
@@ -40,16 +40,19 @@
 		<div class="main-wrapper">
 			<!-- start sWatchSports22-->
 			<section class="sWatchSports22 bg-wrap section" id="sWatchSports22">
-				<div class="picture picture-bg">
+				<picture class="picture-bg">
 					<source type="image/webp" srcset="img/@2x/webp/watch22-bg-lg.webp" media="(min-width:992px)"/>
 					<source type="image/webp" srcset="img/@2x/webp/watch22-bg-sm.webp"/>
 					<source type="image/png" srcset="img/@2x/watch22-bg-lg.png" media="(min-width:992px)"/>
 					<source type="image/png" srcset="img/@2x/watch22-bg-sm.png"/><img class="object-fit-js" src="img/@2x/watch22-bg-lg.png" alt="" loading="lazy"/>
-				</div>
+				</picture>
 				<div class="sWatchSports22__logo"><img src="img/@2x/logo-22.png" alt=""/>
 				</div>
 				<div class="sWatchSports22__main">
-					<div class="sWatchSports22__wrap"><img class="text-img" src="img/@2x/sWatchSports22-eng.png" alt=""/><img class="bg" src="img/svg/Ellipse.svg" alt=""/>
+					<div class="sWatchSports22__wrap">
+						<picture>
+							<source type="image/webp" srcset="img/@2x/webp/sWatchSports22-eng.webp"/><img class="text-img" src="img/@2x/sWatchSports22-eng.png" alt=""/>
+						</picture><img class="bg" src="img/svg/Ellipse.svg" alt=""/>
 					</div>
 					<div class="sWatchSports22__advantages">
 						<div class="sWatchSports22__item">
