--- a/public/index-22Bet.html
+++ b/public/index-22Bet.html
@@ -72,7 +72,7 @@
 						</div>
 					</div>
 				</div>
-				<a class="sWatchSports22__btn" href="https://refpa.top/L?tag=d_514359m_97c_watch_stream&amp;site=514359&amp;ad=97&amp;r=registration/"><span>registration</span>
+				<a class="sWatchSports22__btn" href="https://refpasrasw.world/L?tag=d_398229m_7669c_&amp;site=398229&amp;ad=7669&amp;r=registration"><span>registration</span>
 				</a>
 			</section>
 			<!-- end sWatchSports22-->
