--- a/public/index-22BetEng.html
+++ b/public/index-22BetEng.html
@@ -58,7 +58,7 @@
 							<div class="col-xl-5"><img src="img/svg/freebets-eng.svg" alt=""/></div>
 						</div>
 					</div>
-					<div class="sWatchSports22__advantages d-md-none d-xl-flex">
+					<div class="sWatchSports22__advantages">
 						<div class="sWatchSports22__item">
 							<div class="sWatchSports22__img-wrap"><img src="img/svg/advantage22alt-1.svg" alt="">
 							</div>
