--- a/public/index-22BetEng.html
+++ b/public/index-22BetEng.html
@@ -51,11 +51,11 @@
 				<div class="sWatchSports22__main">
 					<div class="sWatchSports22__wrap">
 						<div class="row align-items-center justify-content-between">
-							<div class="col-xl"><img src="img/svg/sWatchLive-eng.svg" alt=""/></div>
+							<div class="col-xl-auto"><img src="img/svg/sWatchLive-eng.svg" alt=""/></div>
 							<div class="col-xl-auto">
 								<p>And <br> get</p>
 							</div>
-							<div class="col-xl"><img src="img/svg/freebets-eng.svg" alt=""/></div>
+							<div class="col-xl-auto"><img src="img/svg/freebets-eng.svg" alt=""/></div>
 						</div>
 					</div>
 					<div class="sWatchSports22__advantages">
