--- a/public/index-22BetEng.html
+++ b/public/index-22BetEng.html
@@ -51,32 +51,32 @@
 				<div class="sWatchSports22__main">
 					<div class="sWatchSports22__wrap">
 						<div class="row align-items-center justify-content-between">
-							<div class="col-xl-auto"><img src="img/svg/sWatchLive-de.svg" alt=""/></div>
+							<div class="col-xl-auto"><img src="img/svg/sWatchLive-eng.svg" alt=""/></div>
 							<div class="col-xl-auto">
-								<p></p>
+								<p>And <br> get</p>
 							</div>
-							<div class="col-xl-auto"><img src="img/svg/freebets-de.svg" alt=""/></div>
+							<div class="col-xl-auto"><img src="img/svg/freebets-eng.svg" alt=""/></div>
 						</div>
 					</div>
 					<div class="sWatchSports22__advantages">
 						<div class="sWatchSports22__item">
 							<div class="sWatchSports22__img-wrap"><img src="img/svg/advantage22alt-1.svg" alt="">
 							</div>
-							<div class="text-white">Live - <br> Übertragung</div>
+							<div class="text-white">live <br> broadcasts</div>
 						</div>
 						<div class="sWatchSports22__item">
 							<div class="sWatchSports22__img-wrap"><img src="img/svg/advantage22alt-2.svg" alt="">
 							</div>
-							<div class="text-white">Kostenlose  <br> Spielübertragungen</div>
+							<div class="text-white">Free match <br> broadcasts</div>
 						</div>
 						<div class="sWatchSports22__item">
 							<div class="sWatchSports22__img-wrap"><img src="img/svg/advantage22alt-3.svg" alt="">
 							</div>
-							<div class="text-white">Einfache <br> Registrierung</div>
+							<div class="text-white">Easy <br> registration</div>
 						</div>
 					</div>
 				</div>
-				<a class="sWatchSports22__btn" href="https://stv.one/22bet_streaming"><span>Anmeldung</span>
+				<a class="sWatchSports22__btn" href="https://stv.one/22bet_streaming"><span>registration</span>
 				</a>
 			</section>
 			<!-- end sWatchSports22-->
