--- a/public/index-22BetEs.html
+++ b/public/index-22BetEs.html
@@ -51,32 +51,32 @@
 				<div class="sWatchSports22__main">
 					<div class="sWatchSports22__wrap">
 						<div class="row align-items-center justify-content-center">
-							<div class="col-xl"><img src="img/svg/sWatchLive-eng.svg" alt=""/></div>
+							<div class="col-xl"><img src="img/svg/sWatchLive-es.svg" alt=""/></div>
 							<div class="col-xl-auto">
-								<p>And <br> get</p>
+								<p>y&nbsp;consigue</p>
 							</div>
-							<div class="col-xl"><img src="img/svg/freebets-eng.svg" alt=""/></div>
+							<div class="col-xl"><img src="img/svg/freebets-es.svg" alt=""/></div>
 						</div>
 					</div>
 					<div class="sWatchSports22__advantages">
 						<div class="sWatchSports22__item">
 							<div class="sWatchSports22__img-wrap"><img src="img/svg/advantage22alt-1.svg" alt="">
 							</div>
-							<div class="text-white">live <br> broadcasts</div>
+							<div class="text-white">Transmisi&oacute;n <br> en&nbsp;directo</div>
 						</div>
 						<div class="sWatchSports22__item">
 							<div class="sWatchSports22__img-wrap"><img src="img/svg/advantage22alt-2.svg" alt="">
 							</div>
-							<div class="text-white">Free match <br> broadcasts</div>
+							<div class="text-white">Retransmisiones <br> gratuitas&nbsp;de&nbsp;partidos</div>
 						</div>
 						<div class="sWatchSports22__item">
 							<div class="sWatchSports22__img-wrap"><img src="img/svg/advantage22alt-3.svg" alt="">
 							</div>
-							<div class="text-white">Easy <br> registration</div>
+							<div class="text-white">Registro <br> f&aacute;cil</div>
 						</div>
 					</div>
 				</div>
-				<a class="sWatchSports22__btn" href="https://stv.one/22bet_streaming"><span>registration</span>
+				<a class="sWatchSports22__btn" href="https://stv.one/22bet_streaming"><span>Registro</span>
 				</a>
 			</section>
 			<!-- end sWatchSports22-->
