--- a/public/22bet_streaming_gr.html
+++ b/public/22bet_streaming_gr.html
@@ -2,7 +2,7 @@
 <html lang="ru">
 	<head>
 		<meta charset="utf-8">
-		<title>22bet - watch sports online</title>
+		<title>Watch sports online and get 122€ in freebets!</title>
 		<meta name="description" content="о чем страница">
 		<meta http-equiv="X-UA-Compatible" content="IE=edge">
 		<meta name="viewport" content="width=750,   maximum-scale=1 , user-scalable=0, shrink-to-fit=no">
