--- a/public/22bet_streaming_de.html
+++ b/public/22bet_streaming_de.html
@@ -51,32 +51,32 @@
 				<div class="sWatchSports22__main">
 					<div class="sWatchSports22__wrap">
 						<div class="row align-items-center justify-content-center">
-							<div class="col-xl"><img src="img/svg/sWatchLive-cz.svg" alt=""/></div>
+							<div class="col-xl"><img src="img/svg/sWatchLive-de.svg" alt=""/></div>
 							<div class="col-xl-auto">
-								<p>a&nbsp;z&iacute;skejte</p>
+								<p>UND <br> ERHALTEN </p>
 							</div>
-							<div class="col-xl"><img src="img/svg/freebets-cz.svg" alt=""/></div>
+							<div class="col-xl"><img src="img/svg/freebets-de.svg" alt=""/></div>
 						</div>
 					</div>
 					<div class="sWatchSports22__advantages">
 						<div class="sWatchSports22__item">
 							<div class="sWatchSports22__img-wrap"><img src="img/svg/advantage22alt-1.svg" alt="">
 							</div>
-							<div class="text-white">Živ&eacute; <br> vys&iacute;l&aacute;n&iacute;</div>
+							<div class="text-white">Live - <br> Übertragung</div>
 						</div>
 						<div class="sWatchSports22__item">
 							<div class="sWatchSports22__img-wrap"><img src="img/svg/advantage22alt-2.svg" alt="">
 							</div>
-							<div class="text-white">Bezplatn&eacute; <br> přenosy&nbsp;z&aacute;pasů</div>
+							<div class="text-white">Kostenlose  <br> Spielübertragungen</div>
 						</div>
 						<div class="sWatchSports22__item">
 							<div class="sWatchSports22__img-wrap"><img src="img/svg/advantage22alt-3.svg" alt="">
 							</div>
-							<div class="text-white">Snadn&aacute; <br> registrace</div>
+							<div class="text-white">Einfache <br> Registrierung</div>
 						</div>
 					</div>
 				</div>
-				<a class="sWatchSports22__btn" href="https://stv.one/22bet_streaming_cz"><span>Registrace</span>
+				<a class="sWatchSports22__btn" href="https://stv.one/22bet_streaming_de"><span>Anmeldung</span>
 				</a>
 			</section>
 			<!-- end sWatchSports22-->
