--- a/public/22bet_streaming_gr.html
+++ b/public/22bet_streaming_gr.html
@@ -76,7 +76,7 @@
 						</div>
 					</div>
 				</div>
-				<a class="sWatchSports22__btn" href="https://stv.one/22bet_streaming"><span>&Epsilon;&gamma;&gamma;&rho;&alpha;&phi;ή</span>
+				<a class="sWatchSports22__btn" href="https://stv.one/22bet_streaming_gr"><span>&Epsilon;&gamma;&gamma;&rho;&alpha;&phi;ή</span>
 				</a>
 			</section>
 			<!-- end sWatchSports22-->
