--- a/public/22bet_streaming_hu.html
+++ b/public/22bet_streaming_hu.html
@@ -76,7 +76,7 @@
 						</div>
 					</div>
 				</div>
-				<a class="sWatchSports22__btn" href="https://stv.one/22bet_streaming"><span>Regisztr&aacute;ci&oacute;</span>
+				<a class="sWatchSports22__btn" href="https://stv.one/22bet_streaming_hu"><span>Regisztr&aacute;ci&oacute;</span>
 				</a>
 			</section>
 			<!-- end sWatchSports22-->
