--- a/public/22bet_streaming_ke.html
+++ b/public/22bet_streaming_ke.html
@@ -76,7 +76,7 @@
 						</div>
 					</div>
 				</div>
-				<a class="sWatchSports22__btn" href="https://stv.one/22bet_streaming"><span>registration</span>
+				<a class="sWatchSports22__btn" href="https://stv.one/22bet_streaming_ke"><span>registration</span>
 				</a>
 			</section>
 			<!-- end sWatchSports22-->
