--- a/public/22bet_streaming_ro.html
+++ b/public/22bet_streaming_ro.html
@@ -76,7 +76,7 @@
 						</div>
 					</div>
 				</div>
-				<a class="sWatchSports22__btn" href="https://stv.one/22bet_streaming"><span>&Icirc;nregistrare</span>
+				<a class="sWatchSports22__btn" href="https://stv.one/22bet_streaming_ro"><span>&Icirc;nregistrare</span>
 				</a>
 			</section>
 			<!-- end sWatchSports22-->
